// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProductDetailClient snapshots renders error state with retry button 1`] = `
<DocumentFragment>
  <section
    class="mx-auto flex w-full max-w-5xl flex-col gap-6 p-6"
  >
    <header
      class="space-y-2"
    >
      <p
        class="text-sm text-neutral-500"
      >
        Producto
      </p>
      <h1
        class="text-3xl font-semibold tracking-tight text-neutral-900"
      >
        Cargando producto...
      </h1>
    </header>
    <div
      class="space-y-3 rounded-md border border-red-200 bg-red-50 p-4 text-sm text-red-700"
    >
      <p>
        No pudimos cargar el producto. Código: 500
      </p>
      <button
        class="inline-flex items-center justify-center gap-2 rounded-md border border-red-600 px-3 py-1.5 text-xs font-semibold text-red-700 transition hover:bg-red-100 focus:outline-none focus:ring-2 focus:ring-red-400"
        type="button"
      >
        Reintentar
      </button>
    </div>
    <div
      class="flex aspect-4/3 items-center justify-center rounded-lg border border-dashed border-neutral-200 bg-neutral-50 text-sm text-neutral-500"
    >
      Este producto no tiene imágenes disponibles.
    </div>
  </section>
</DocumentFragment>
`;

exports[`ProductDetailClient snapshots renders loading state snapshot 1`] = `
<DocumentFragment>
  <section
    class="mx-auto flex w-full max-w-5xl flex-col gap-6 p-6"
  >
    <header
      class="space-y-2"
    >
      <p
        class="text-sm text-neutral-500"
      >
        Producto
      </p>
      <h1
        class="text-3xl font-semibold tracking-tight text-neutral-900"
      >
        Cargando producto...
      </h1>
    </header>
    <div
      class="space-y-3"
      data-testid="product-gallery-skeleton"
    >
      <div
        aria-hidden="true"
        class="aspect-[4/3] w-full animate-pulse rounded-lg bg-neutral-200"
      />
      <div
        class="flex gap-2"
      >
        <div
          aria-hidden="true"
          class="h-20 w-20 animate-pulse rounded-md bg-neutral-200"
        />
        <div
          aria-hidden="true"
          class="h-20 w-20 animate-pulse rounded-md bg-neutral-200"
        />
        <div
          aria-hidden="true"
          class="h-20 w-20 animate-pulse rounded-md bg-neutral-200"
        />
        <div
          aria-hidden="true"
          class="h-20 w-20 animate-pulse rounded-md bg-neutral-200"
        />
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ProductDetailClient snapshots shows anomaly warning when multiple primary images 1`] = `
<DocumentFragment>
  <section
    class="mx-auto flex w-full max-w-5xl flex-col gap-6 p-6"
  >
    <header
      class="space-y-2"
    >
      <p
        class="text-sm text-neutral-500"
      >
        Producto
      </p>
      <h1
        class="text-3xl font-semibold tracking-tight text-neutral-900"
      >
        Producto Demo
      </h1>
    </header>
    <div
      class="space-y-1 rounded-md border border-amber-200 bg-amber-50 p-3 text-sm text-amber-700"
    >
      <p>
        Se recibieron varias imágenes principales. Se mostrará la primera según sort_order.
      </p>
    </div>
    <div
      class="space-y-3"
    >
      <figure
        class="relative aspect-4/3 overflow-hidden rounded-lg border border-neutral-200 bg-neutral-50"
      >
        <img
          alt="Imagen 1"
          class="object-cover"
          data-nimg="fill"
          data-testid="product-gallery-main-image"
          decoding="async"
          id="product-gallery-main-image"
          loading="lazy"
          sizes="(min-width:1024px) 640px, (min-width:640px) 560px, 100vw"
          src="/_next/image?url=https%3A%2F%2Fexample.com%2F1.jpg&w=3840&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fexample.com%2F1.jpg&w=640&q=75 640w, /_next/image?url=https%3A%2F%2Fexample.com%2F1.jpg&w=750&q=75 750w, /_next/image?url=https%3A%2F%2Fexample.com%2F1.jpg&w=828&q=75 828w, /_next/image?url=https%3A%2F%2Fexample.com%2F1.jpg&w=1080&q=75 1080w, /_next/image?url=https%3A%2F%2Fexample.com%2F1.jpg&w=1200&q=75 1200w, /_next/image?url=https%3A%2F%2Fexample.com%2F1.jpg&w=1920&q=75 1920w, /_next/image?url=https%3A%2F%2Fexample.com%2F1.jpg&w=2048&q=75 2048w, /_next/image?url=https%3A%2F%2Fexample.com%2F1.jpg&w=3840&q=75 3840w"
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
        />
        <figcaption
          class="sr-only"
        >
          Imagen 1
        </figcaption>
      </figure>
      <div
        aria-label="Imagenes del producto"
        class="flex gap-2 overflow-x-auto"
        data-testid="product-gallery-thumbnails"
        role="listbox"
      >
        <button
          aria-controls="product-gallery-main-image"
          aria-selected="true"
          class="relative size-20 shrink-0 overflow-hidden rounded-md border transition focus:outline-none focus:ring-2 focus:ring-neutral-600 ring-2 ring-neutral-900 border-neutral-900"
          data-gallery-thumb="true"
          role="option"
          type="button"
        >
          <span
            class="sr-only"
          >
            Imagen seleccionada: Imagen 1
          </span>
          <img
            alt="Imagen 1"
            class="object-cover"
            data-nimg="1"
            decoding="async"
            height="80"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fexample.com%2F1.jpg&w=256&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fexample.com%2F1.jpg&w=96&q=75 1x, /_next/image?url=https%3A%2F%2Fexample.com%2F1.jpg&w=256&q=75 2x"
            style="color: transparent;"
            width="80"
          />
        </button>
        <button
          aria-controls="product-gallery-main-image"
          aria-selected="false"
          class="relative size-20 shrink-0 overflow-hidden rounded-md border transition focus:outline-none focus:ring-2 focus:ring-neutral-600 border-neutral-200"
          data-gallery-thumb="true"
          role="option"
          type="button"
        >
          <span
            class="sr-only"
          >
            Seleccionar imagen: Imagen 2
          </span>
          <img
            alt="Imagen 2"
            class="object-cover"
            data-nimg="1"
            decoding="async"
            height="80"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fexample.com%2F2.jpg&w=256&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fexample.com%2F2.jpg&w=96&q=75 1x, /_next/image?url=https%3A%2F%2Fexample.com%2F2.jpg&w=256&q=75 2x"
            style="color: transparent;"
            width="80"
          />
        </button>
      </div>
    </div>
    <article
      class="space-y-4"
    >
      <p
        class="text-base leading-relaxed text-neutral-700"
      >
        Descripcion demo
      </p>
      <dl
        class="grid grid-cols-1 gap-4 sm:grid-cols-2"
      >
        <div
          class="rounded-lg border border-neutral-200 bg-white p-4"
        >
          <dt
            class="text-xs uppercase tracking-wide text-neutral-500"
          >
            Precio
          </dt>
          <dd
            class="text-xl font-semibold text-neutral-900"
          >
            199,00 US$
          </dd>
        </div>
        <div
          class="rounded-lg border border-neutral-200 bg-white p-4"
        >
          <dt
            class="text-xs uppercase tracking-wide text-neutral-500"
          >
            Estado
          </dt>
          <dd
            class="text-sm text-neutral-800"
          >
            Disponible
          </dd>
        </div>
      </dl>
    </article>
  </section>
</DocumentFragment>
`;
